--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:layout_marginVertical="@dimen/marginVertical"
         android:id="@+id/image_list"
         android:layout_width="@dimen/width"
         android:layout_height="@dimen/height"
