--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="width">50dp</dimen>
     <dimen name="height">50dp</dimen>
     <dimen name="marginLeft">16dp</dimen>
+    <dimen name="marginVertical">4dp</dimen>
 </resources>
